// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`using npm Roblox environment creates a script to build a Roblox model 1`] = `
"#!/bin/sh

set -e

DARKLUA_CONFIG=$1
BUILD_OUTPUT=$2

npm install --omit dev
npx npmluau

rm -rf temp
mkdir -p temp
cp -r src/ temp/
cp -rL node_modules/ temp/
cp "$DARKLUA_CONFIG" "temp/$DARKLUA_CONFIG"

./scripts/remove-tests.sh temp

rojo sourcemap model.project.json -o temp/sourcemap.json

cd temp

darklua process --config "$DARKLUA_CONFIG" src src
darklua process --config "$DARKLUA_CONFIG" node_modules node_modules

cd ..

cp model.project.json temp/

rm -f "$BUILD_OUTPUT"
mkdir -p $(dirname "$BUILD_OUTPUT")

rojo build temp/model.project.json -o "$BUILD_OUTPUT"

rm -rf temp
"
`;

exports[`using npm general setup creates the package.json file 1`] = `
{
  "author": "Author Name <author@write.com>",
  "dependencies": {},
  "description": "",
  "devDependencies": {
    "@jsdotlua/jest": Any<String>,
    "@jsdotlua/jest-globals": Any<String>,
    "npmluau": Any<String>,
  },
  "homepage": "https://github.com/owner/new-project#readme",
  "keywords": [
    "luau",
  ],
  "license": "MIT",
  "main": "src/init.lua",
  "name": "new-project",
  "repository": {
    "type": "git",
    "url": "git+https://github.com/owner/new-project.git",
  },
  "scripts": {
    "clean": "rm -rf node_modules build temp",
    "format": "stylua .",
    "lint": "sh ./scripts/analyze.sh && selene src",
    "lint:luau": "sh ./scripts/analyze.sh",
    "lint:selene": "selene src",
    "prepare": "npmluau",
    "style-check": "stylua . --check",
    "test:roblox": "sh ./scripts/roblox-test.sh",
    "verify-pack": "npm pack --dry-run",
  },
  "version": "0.1.0",
}
`;

exports[`using yarn Roblox environment creates a script to build a Roblox model 1`] = `
"#!/bin/sh

set -e

DARKLUA_CONFIG=$1
BUILD_OUTPUT=$2

yarn workspaces focus --production
yarn dlx npmluau

rm -rf temp
mkdir -p temp
cp -r src/ temp/
cp -rL node_modules/ temp/
cp "$DARKLUA_CONFIG" "temp/$DARKLUA_CONFIG"

./scripts/remove-tests.sh temp

rojo sourcemap model.project.json -o temp/sourcemap.json

cd temp

darklua process --config "$DARKLUA_CONFIG" src src
darklua process --config "$DARKLUA_CONFIG" node_modules node_modules

cd ..

cp model.project.json temp/

rm -f "$BUILD_OUTPUT"
mkdir -p $(dirname "$BUILD_OUTPUT")

rojo build temp/model.project.json -o "$BUILD_OUTPUT"

rm -rf temp
"
`;

exports[`using yarn general setup creates the package.json file 1`] = `
{
  "author": "Author Name <author@write.com>",
  "dependencies": {},
  "description": "",
  "devDependencies": {
    "@jsdotlua/jest": Any<String>,
    "@jsdotlua/jest-globals": Any<String>,
    "npmluau": Any<String>,
  },
  "homepage": "https://github.com/owner/new-project#readme",
  "keywords": [
    "luau",
  ],
  "license": "MIT",
  "main": "src/init.lua",
  "name": "new-project",
  "repository": {
    "type": "git",
    "url": "git+https://github.com/owner/new-project.git",
  },
  "scripts": {
    "clean": "rm -rf node_modules build temp",
    "format": "stylua .",
    "lint": "sh ./scripts/analyze.sh && selene src",
    "lint:luau": "sh ./scripts/analyze.sh",
    "lint:selene": "selene src",
    "prepare": "npmluau",
    "style-check": "stylua . --check",
    "test:roblox": "sh ./scripts/roblox-test.sh",
    "verify-pack": "yarn pack --dry-run",
  },
  "version": "0.1.0",
}
`;
